1. TipListPageActivity 카드뷰 코드 추가 2. CardAdapter 3. NatureItme (추후 파일명 변경 예상) 4. 카드뷰 연습

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="to">To</string>
     <string name="title_activity_floating">floatingActivity</string>
     <string name="title_activity_tip_list_page">TipListPageActivity</string>
+
+    <string name="action_info">Photo info</string>
+    <string name="action_photo">View photo</string>
 </resources>
